--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+* {
+    box-sizing: border-box;
+  }
 html, body {
     margin: 0;
     padding: 0;
@@ -65,6 +68,35 @@ h2{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.item{
+    display: inline-block; /* or block */
+    transition: background-color 0.3s ease;
+    background-color: black;
+    color: white;
+    
+}
+.button{
+    display: inline-block; /* or block */
+    transition: background-color 0.3s ease;
+    background-color: white;
+    color: black;
+    font-family:'Courier New', Courier, monospace;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    width: 100px;
+    display: block;
+    margin: 20px auto;
+}
+.menuInfo{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
 }
 .menuBox::-webkit-scrollbar {
     width: 5px; /* Width of the vertical scrollbar */
