--- a/style.css
+++ b/style.css
@@ -63,11 +63,12 @@ h2{
 }
 .bottomBox {
     flex: 1 0 10%;
+    flex-direction: row;
     background-color: black;
     color: white;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 }
 .item{
     display: inline-block; /* or block */
@@ -75,6 +76,13 @@ h2{
     background-color: black;
     color: white;
     
+}
+.navigator{
+    display: inline-block;
+    transition: background-color 0.3s ease;
+    background-color: black;
+    color: white;
+    font-family:'Courier New', Courier, monospace;
 }
 .button{
     display: inline-block; /* or block */
