--- a/style.css
+++ b/style.css
@@ -114,6 +114,15 @@ h2{
     justify-content: space-between;
 
 }
+.orderItem{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid white;
+}
+
 .pageButtonGrouper{
     display: flex;
     flex-direction: row;
